[package]
name = "kappa-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23"
# egui-wgpu = "0.23"
wgpu = "0.17"

[dependencies.winit]
version = "0.29"
features = ["rwh_05"]

[dependencies.eframe]
version = "0.23"

[dependencies.egui_extras]
version = "0.23"
features = ["image"]

[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
